<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"

    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.authorization.signUp.SignUpNameFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/first_name_ed"
        style="@style/signUpPlaceholder"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name_ed"
        style="@style/signUpPlaceholder"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/last_name_string"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_ed" />

    <TextView
        android:id="@+id/textView5"
        style="@style/subTitleString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="128"
        android:text="@string/whats_your_name"
        app:layout_constraintBottom_toTopOf="@+id/first_name_ed"
        app:layout_constraintStart_toStartOf="@+id/first_name_ed" />

    <EditText
        android:id="@+id/age_ed"
        style="@style/signUpPlaceholder"
        android:layout_width="0dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/age_string"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_ed" />

    <TextView
        android:id="@+id/textView6"
        style="@style/subTitleString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_old_are_you"
        app:layout_constraintBottom_toTopOf="@+id/age_ed"
        app:layout_constraintStart_toStartOf="@+id/age_ed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>