<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.nettlike.app.view.main.profileInnerFragments.EditUserProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">


        <ImageView
            android:id="@+id/edit_img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:textColorHint="@color/grey"
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_img_profile"
            app:layout_constraintTop_toTopOf="@+id/edit_img_profile" />

        <EditText
            android:textColorHint="@color/grey"

            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/age_string"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_img_profile"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <EditText
            android:textColorHint="@color/grey"

            android:id="@+id/last_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/last_name_string"
            android:layout_marginStart="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/edit_img_profile"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <EditText
            android:id="@+id/follower_username"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/job_title"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:textColorHint="@color/grey"
            
            android:id="@+id/about_yourself_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/tell_me_about_yourself"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_recycler_Tag" />

        <TextView
            android:id="@+id/select_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Country"
            android:drawableEnd="@drawable/ic_arrow"
            android:textColor="@color/black000"
            android:textColorHint="#65000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/follower_username" />

        <TextView
            android:id="@+id/choose_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:hint="@string/choose_tags"
            android:drawableEnd="@drawable/ic_arrow"
            android:textColorHint="#65000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_recycler_Tag"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_tags" />

        <EditText
            android:textColorHint="@color/grey"
            android:id="@+id/facebook_link"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/profile_username"
            android:inputType="textPersonName"
            android:text="@string/facebook_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twitter_link" />

        <EditText
            android:textColorHint="@color/grey"

            android:id="@+id/twitter_link"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/profile_username"
            android:text="@string/twitter_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_yourself_ed" />

        <Button
            style="@style/nextBtnSignUp"
            android:id="@+id/save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/facebook_link" />

        <Button
            android:id="@+id/log_out_btn"
            style="@style/nextBtnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_out_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save_data"
            app:layout_constraintStart_toStartOf="@+id/save_data"
            app:layout_constraintTop_toBottomOf="@+id/save_data" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>