<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUp.SignUpAboutYourselfFragment">


    <EditText
        android:id="@+id/about_yourself_ed"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_about_yourself"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:text="@string/tell_me_about_yourself"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_are_you_doing"
        app:layout_constraintBottom_toTopOf="@+id/about_yourself_ed"
        app:layout_constraintStart_toStartOf="@+id/about_yourself_ed" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exmple_about_yourself"
        app:layout_constraintStart_toStartOf="@+id/about_yourself_ed"
        app:layout_constraintTop_toBottomOf="@+id/about_yourself_ed" />
</androidx.constraintlayout.widget.ConstraintLayout>